--- a/stylesheet/main.scss
+++ b/stylesheet/main.scss
@@ -33,7 +33,6 @@
 @import "../node_modules/bootstrap/scss/button-group";
 @import "../node_modules/bootstrap/scss/nav";
 @import "../node_modules/bootstrap/scss/navbar";
-@import "./components/navbar";
 @import "../node_modules/bootstrap/scss/card";//曾關掉卡片 導致stretched-link延伸出錯
 @import "../node_modules/bootstrap/scss/accordion";
 @import "../node_modules/bootstrap/scss/breadcrumb";
@@ -56,8 +55,10 @@
 @import "../node_modules/bootstrap/scss/helpers";
 // Utilities
 @import "../node_modules/bootstrap/scss/utilities/api";
-//component
-// @import "./cv-box";
-// @import "./bg-dark-gradient";
-// @import "./sidebar";
 
+//component
+
+
+//pages
+@import "./pages/home";
+@import "./pages/allstar";
