--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -3,6 +3,7 @@
 @import url("https://fonts.googleapis.com/css?family=Rubik:700&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Rubik:700&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Rubik:700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Rubik:700&display=swap");
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
@@ -12191,11 +12192,17 @@ textarea.form-control-lg {
 }
 
 .banner {
-  background-image: url(../../nbaWeb/abhay-siby-mathew-LmEuUMbd5Rw-unsplash.jpg);
+  background-image: url(../../nbaWeb/john-villablanca-_7EXgSQ98ew-unsplash.jpg);
   width: 100%;
-  height: 400px;
+  height: 810px;
 }
 
+@media (max-width: 768px) {
+  .banner {
+    height: 600px;
+    background-position: top center;
+  }
+}
 .money_img {
   max-width: 548px;
 }
@@ -12592,4 +12599,199 @@ button.learn-more:active::before {
   .aside h3, .aside .h3 {
     text-align: center;
   }
+}
+* {
+  font-family: "Rubik", sans-serif;
+}
+
+.navbar {
+  /* Grow Shadow */
+}
+.navbar .navbar-brand {
+  /* 圖片裝入容器 */
+  background-image: url(../../nbaWeb/1588928235basketball-fire-logo-silhouette-freesvg.org.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  /* 圖片取代文字 */
+  display: block;
+  text-indent: 101%;
+  overflow: hidden;
+  white-space: nowrap;
+  width: 50px;
+  height: 50px;
+  border: 2px black solid;
+  border-radius: 50%;
+  background-color: #fff;
+}
+.navbar h1, .navbar .h1 {
+  color: #fff;
+}
+.navbar h1:hover, .navbar .h1:hover {
+  color: #cc2b31;
+}
+.navbar .navbar-nav a {
+  color: #fff;
+  font-weight: bold;
+}
+.navbar .navbar-nav a:hover {
+  color: #cc2b31;
+}
+.navbar .hvr-grow-shadow {
+  display: inline-block;
+  vertical-align: middle;
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  transition-duration: 0.3s;
+  transition-property: box-shadow, transform;
+}
+.navbar .hvr-grow-shadow:hover,
+.navbar .hvr-grow-shadow:focus,
+.navbar .hvr-grow-shadow:active {
+  box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
+  transform: scale(1.1);
+}
+
+.custom_banner {
+  background-image: url(../../nbaWeb/abhay-siby-mathew-LmEuUMbd5Rw-unsplash.jpg);
+  width: 100%;
+  height: 810px;
+}
+
+.money_img {
+  max-width: 548px;
+}
+
+.money .money_service {
+  font: normal normal bold 24px/39px Kalam;
+  color: #f9c745;
+}
+.money .money_title {
+  color: #3A3A3A;
+  font: normal normal bold 24px/39px Kalam;
+}
+
+.new_product_img {
+  width: 100%;
+  height: 312px;
+  position: absolute;
+  border-radius: 3%;
+  color: white;
+  padding-left: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8));
+  display: none;
+}
+
+.hover_img .new_product_img {
+  display: block;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+}
+
+.sell_more a:hover {
+  font-weight: bold;
+}
+
+.rank_card .card-img-top:hover .sell_more a {
+  font-weight: bold;
+  color: #cc2b31;
+}
+.rank_card .img_back {
+  width: 100%;
+  height: 250px;
+  background-color: #fff;
+  border-radius: 5%;
+}
+.rank_card .hover_img.img_back001 {
+  background-image: url(../../nbaWeb/olivier-collet-H7cIqigZOBo-unsplash.jpg);
+  background-position: center center;
+  background-size: cover;
+}
+.rank_card .hover_img.img_back002 {
+  background-image: url(../../nbaWeb/PNG-images-NBA-Players-3png.png);
+  background-position: center center;
+  background-size: none;
+  background-repeat: no-repeat;
+}
+.rank_card .hover_img.img_back003 {
+  background-image: url(../../nbaWeb/tyler-martoia-nVpT1jeu3f0-unsplash.jpg);
+  background-position: center center;
+  background-size: cover;
+}
+.rank_card .hover_img.card-img-top {
+  display: none;
+}
+.rank_card .card-text {
+  white-space: nowrap; /*段落不自動換行*/
+  overflow: hidden; /*超過寬度隱藏*/
+  text-overflow: ellipsis; /*文字省略號*/
+  height: 80px;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+.rank_card a::after {
+  content: "";
+  position: absolute;
+  top: 90%;
+  left: 10%;
+  background: #adb5bd;
+  width: 80%;
+  height: 1px;
+}
+
+button {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  outline: none;
+  border: 0;
+  vertical-align: middle;
+  text-decoration: none;
+  font-size: inherit;
+  font-family: inherit;
+}
+button.learn-more {
+  font-weight: 600;
+  color: #382b22;
+  text-transform: uppercase;
+  padding: 1.25em 2em;
+  background: #fff0f0;
+  border: 2px solid none;
+  border-radius: 0.75em;
+  transform-style: preserve-3d;
+  transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), background 150ms cubic-bezier(0, 0, 0.58, 1);
+}
+button.learn-more::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #000;
+  border-radius: inherit;
+  box-shadow: 0 0 0 2px none, 0 0.625em 0 0 #000;
+  transform: translate3d(0, 0.75em, -1em);
+  transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
+}
+button.learn-more:hover {
+  background: #ffe9e9;
+  transform: translate(0, 0.25em);
+}
+button.learn-more:hover::before {
+  box-shadow: 0 0 0 2px none, 0 0.5em 0 0 #000;
+  transform: translate3d(0, 0.5em, -1em);
+}
+button.learn-more:active {
+  background: #ffe9e9;
+  transform: translate(0em, 0.75em);
+}
+button.learn-more:active::before {
+  box-shadow: 0 0 0 2px none, 0 0 #000;
+  transform: translate3d(0, 0, -1em);
 }/*# sourceMappingURL=main.css.map */
