--- a/stylesheet/main.scss
+++ b/stylesheet/main.scss
@@ -1,17 +1,16 @@
-
 ////以下是BS官方的引入順序
-/// 
+///
 // 先引入函式 再改的變動檔 (只有變數這樣 其他像按鈕那樣引入)
 @import "../node_modules/bootstrap/scss/functions";
 // 變動檔跟原始檔 引入其一即可
-@import "./helpers/variables"; 
+@import "./helpers/variables";
 //再引入原始檔(這是總檔)
-// @import "../node_modules/bootstrap/scss/bootstrap"; 
+// @import "../node_modules/bootstrap/scss/bootstrap";
 //bootstrap 5.2版本 新增了map.scss檔案，只要再匯入進去就可以解決問題 (map也需要使用到變數
 @import "../node_modules/bootstrap/scss/maps";
 //以下就是原始檔全部細項 依照需求引入 不須全部
 @import "../node_modules/bootstrap/scss/mixins";
-@import "./helpers/utilities";  
+@import "./helpers/utilities";
 // Layout & components
 @import "../node_modules/bootstrap/scss/root";
 @import "../node_modules/bootstrap/scss/reboot";
@@ -25,14 +24,14 @@
 @import "../node_modules/bootstrap/scss/forms";
 //舉例 關掉就沒有按鈕樣式 (相反 引入原始再變動
 @import "../node_modules/bootstrap/scss/buttons";
-@import "./components/buttons_custom";  
+@import "./components/buttons_custom";
 //內建選用
 @import "../node_modules/bootstrap/scss/transitions"; //沒開沒下拉
 @import "../node_modules/bootstrap/scss/dropdown";
 @import "../node_modules/bootstrap/scss/button-group";
 @import "../node_modules/bootstrap/scss/nav";
 @import "../node_modules/bootstrap/scss/navbar";
-@import "../node_modules/bootstrap/scss/card";//曾關掉卡片 導致stretched-link延伸出錯
+@import "../node_modules/bootstrap/scss/card"; //曾關掉卡片 導致stretched-link延伸出錯
 @import "../node_modules/bootstrap/scss/accordion";
 @import "../node_modules/bootstrap/scss/breadcrumb";
 @import "../node_modules/bootstrap/scss/pagination";
@@ -57,8 +56,8 @@
 
 //老師自訂component
 
-
 //學生pages
 @import "./pages/home";
 @import "./pages/allstar";
 @import "./pages/newproduct";
+@import "./pages/customzied";
