--- a/stylesheet/pages/_customzied.scss
+++ b/stylesheet/pages/_customzied.scss
@@ -1,5 +1,4 @@
 @import "../utils/mix";
-@import "../utils/function";
 @import "../helpers/variables";
 @import url("https://fonts.googleapis.com/css?family=Rubik:700&display=swap");
 
@@ -50,16 +49,10 @@
   }
 }
 
-.banner {
-  background-image: url(../../nbaWeb/john-villablanca-_7EXgSQ98ew-unsplash.jpg);
+.custom_banner {
+  background-image: url(../../nbaWeb/abhay-siby-mathew-LmEuUMbd5Rw-unsplash.jpg);
   width: 100%;
   height: 810px;
-}
-@include pad() {
-  .banner {
-    height: 600px;
-    background-position: top center;
-  }
 }
 
 .money_img {
